--- a/templates/includes/mobile_nav.html
+++ b/templates/includes/mobile_nav.html
@@ -76,8 +76,8 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link mobile-nav-link" href="{% url 'paiements:charge_deductible_list' %}">
-                                <i class="bi bi-lightning"></i> Charges Déductibles
+                            <a class="nav-link mobile-nav-link" href="{% url 'paiements:liste_charges_avancees' %}">
+                                <i class="bi bi-lightning"></i> Charges Avancées
                             </a>
                         </li>
                         
