--- a/templates/paiements/paiement_list.html
+++ b/templates/paiements/paiement_list.html
@@ -228,9 +228,9 @@
                                                 <i class="bi bi-x-circle"></i>
                                             </button>
                                         {% elif paiement.statut == 'valide' %}
-                                            <a href="{% url 'paiements:generer_quittance_kbis_dynamique' paiement.pk %}" 
+                                            <a href="{% url 'paiements:generer_quittance_manuelle' paiement.pk %}" 
                                                class="btn btn-sm btn-success"
-                                               title="Quittance KBIS dynamique">
+                                               title="Générer quittance">
                                                 <i class="bi bi-file-earmark-text me-1"></i>Quittance
                                             </a>
                                             <a href="{% url 'paiements:generer_recu_kbis_dynamique' paiement.pk %}" 
